<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical" >



    <EditText
        android:id="@+id/design_menu_item_text"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:text="@string/text"
        android:inputType="text"
        android:textSize="30sp" />
    <EditText
        android:id="@+id/textPersonName"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:text="@string/textPersonName"
        android:inputType="textPersonName"
        android:textSize="30sp" />
    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:text="@string/phone"
        android:inputType="phone"
        android:textSize="30sp" />
    <EditText
        android:id="@+id/number"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:text="@string/number"
        android:inputType="number"
        android:textSize="30sp" />
    <EditText
        android:id="@+id/textPassword"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:text="@string/number"
        android:inputType="textPassword"
        android:textSize="30sp" />
    <EditText
        android:id="@+id/textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:text="@string/Email"
        android:inputType="textEmailAddress"
        android:textSize="30sp" />
    <EditText
        android:id="@+id/textCapCharacters"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:text="textCapCharacters"
        android:inputType="textCapCharacters"
        android:textSize="30sp" />
    <EditText
        android:id="@+id/textAutoCorrect"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:text="textAutoCorrect"
        android:inputType="textAutoCorrect"
        android:textSize="30sp" />
    <CalendarView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>